--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@
 .bodyContainer {
   background: center center fixed;
   background-size: cover;
-  background-image: url("/img/bg2.png");
+  background-image: url("../img/bg2.png");
 }
 
 .containerTitulo {
